--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+	canvas#labels
 	.branding
 		#title In the Tweet of the Night
 		#subtitle A Heat Map of the U.S.'s activity on twitter
