--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
     block content
   script(src='/socket.io/socket.io.js')
   script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-  script(src='https://www.khronos.org/registry/webgl/sdk/debug/webgl-debug.js')
+  script(src='/javascripts/underscore-min.js')
   script(src='/javascripts/webgl-heatmap.js')
   script(src='/javascripts/client.js')
   script.
@@ -17,5 +17,5 @@ html
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-41145442-2', 'codevinsky.com');
+    ga('create', 'UA-41145442-2', 'threebound.com');
     ga('send', 'pageview');
