--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
   script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
   script(src='/javascripts/underscore-min.js')
   script(src='/javascripts/webgl-heatmap.js')
+  script(src='/javascripts/dat.gui.js')
   script(src='/javascripts/client.js')
   script.
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
