--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,5 +18,5 @@ html
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-41145442-2', 'threebound.com');
+    ga('create', 'UA-41145442-2', 'tweetmap.codevinsky.com');
     ga('send', 'pageview');
